; ModuleID = '/home/carl/AnghaBench/linux/drivers/hwmon/extr_gpio-fan.c_fan_ctrl_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/hwmon/extr_gpio-fan.c_fan_ctrl_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_fan_data = type { i32, i32, i64, %struct.gpio_desc** }
%struct.gpio_desc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.gpio_fan_data*)* @fan_ctrl_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fan_ctrl_init(%struct.gpio_fan_data* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.gpio_fan_data*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.gpio_desc**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.gpio_fan_data* %0, %struct.gpio_fan_data** %3, align 8
  %8 = load %struct.gpio_fan_data*, %struct.gpio_fan_data** %3, align 8
  %9 = getelementptr inbounds %struct.gpio_fan_data, %struct.gpio_fan_data* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 8
  store i32 %10, i32* %4, align 4
  %11 = load %struct.gpio_fan_data*, %struct.gpio_fan_data** %3, align 8
  %12 = getelementptr inbounds %struct.gpio_fan_data, %struct.gpio_fan_data* %11, i32 0, i32 3
  %13 = load %struct.gpio_desc**, %struct.gpio_desc*** %12, align 8
  store %struct.gpio_desc** %13, %struct.gpio_desc*** %5, align 8
  store i32 0, i32* %6, align 4
  br label %14

14:                                               ; preds = %36, %1
  %15 = load i32, i32* %6, align 4
  %16 = load i32, i32* %4, align 4
  %17 = icmp slt i32 %15, %16
  br i1 %17, label %18, label %39

18:                                               ; preds = %14
  %19 = load %struct.gpio_desc**, %struct.gpio_desc*** %5, align 8
  %20 = load i32, i32* %6, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.gpio_desc*, %struct.gpio_desc** %19, i64 %21
  %23 = load %struct.gpio_desc*, %struct.gpio_desc** %22, align 8
  %24 = load %struct.gpio_desc**, %struct.gpio_desc*** %5, align 8
  %25 = load i32, i32* %6, align 4
  %26 = sext i32 %25 to i64
  %27 = getelementptr inbounds %struct.gpio_desc*, %struct.gpio_desc** %24, i64 %26
  %28 = load %struct.gpio_desc*, %struct.gpio_desc** %27, align 8
  %29 = call i32 @gpiod_get_value_cansleep(%struct.gpio_desc* %28)
  %30 = call i32 @gpiod_direction_output(%struct.gpio_desc* %23, i32 %29)
  store i32 %30, i32* %7, align 4
  %31 = load i32, i32* %7, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %18
  %34 = load i32, i32* %7, align 4
  store i32 %34, i32* %2, align 4
  br label %56

35:                                               ; preds = %18
  br label %36

36:                                               ; preds = %35
  %37 = load i32, i32* %6, align 4
  %38 = add nsw i32 %37, 1
  store i32 %38, i32* %6, align 4
  br label %14

39:                                               ; preds = %14
  %40 = load %struct.gpio_fan_data*, %struct.gpio_fan_data** %3, align 8
  %41 = getelementptr inbounds %struct.gpio_fan_data, %struct.gpio_fan_data* %40, i32 0, i32 1
  store i32 1, i32* %41, align 4
  %42 = load %struct.gpio_fan_data*, %struct.gpio_fan_data** %3, align 8
  %43 = call i64 @get_fan_speed_index(%struct.gpio_fan_data* %42)
  %44 = load %struct.gpio_fan_data*, %struct.gpio_fan_data** %3, align 8
  %45 = getelementptr inbounds %struct.gpio_fan_data, %struct.gpio_fan_data* %44, i32 0, i32 2
  store i64 %43, i64* %45, align 8
  %46 = load %struct.gpio_fan_data*, %struct.gpio_fan_data** %3, align 8
  %47 = getelementptr inbounds %struct.gpio_fan_data, %struct.gpio_fan_data* %46, i32 0, i32 2
  %48 = load i64, i64* %47, align 8
  %49 = icmp slt i64 %48, 0
  br i1 %49, label %50, label %55

50:                                               ; preds = %39
  %51 = load %struct.gpio_fan_data*, %struct.gpio_fan_data** %3, align 8
  %52 = getelementptr inbounds %struct.gpio_fan_data, %struct.gpio_fan_data* %51, i32 0, i32 2
  %53 = load i64, i64* %52, align 8
  %54 = trunc i64 %53 to i32
  store i32 %54, i32* %2, align 4
  br label %56

55:                                               ; preds = %39
  store i32 0, i32* %2, align 4
  br label %56

56:                                               ; preds = %55, %50, %33
  %57 = load i32, i32* %2, align 4
  ret i32 %57
}

declare dso_local i32 @gpiod_direction_output(%struct.gpio_desc*, i32) #1

declare dso_local i32 @gpiod_get_value_cansleep(%struct.gpio_desc*) #1

declare dso_local i64 @get_fan_speed_index(%struct.gpio_fan_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
